Commented out swarmmesh dependency for plugin testing. Wrote simple experiment. Added readme

--- a/argos-application/controllers/collective_perception_controller/CMakeLists.txt
+++ b/argos-application/controllers/collective_perception_controller/CMakeLists.txt
@@ -2,5 +2,5 @@ add_library(collective_perception_controller SHARED collective_perception_contro
 target_link_libraries(collective_perception_controller
   argos3core_simulator
   argos3plugin_simulator_footbot
-  argos3plugin_simulator_genericrobot
-  swarm_mesh_library)
+  argos3plugin_simulator_genericrobot)
+  # swarm_mesh_library)
