--- a/argos-point-cloud/src/CMakeLists.txt
+++ b/argos-point-cloud/src/CMakeLists.txt
@@ -4,6 +4,8 @@ project(pointcloud)
 #
 cmake_minimum_required(VERSION 2.8.12)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 #
 # Deactivate RPATH for MacOSX
