Simulate incorrect predictions

--- a/argos-application/controllers/collective_perception_controller/CMakeLists.txt
+++ b/argos-application/controllers/collective_perception_controller/CMakeLists.txt
@@ -3,4 +3,5 @@ target_link_libraries(collective_perception_controller
   argos3core_simulator
   argos3plugin_simulator_footbot
   argos3plugin_simulator_genericrobot
-  swarm_mesh_library)
+  swarm_mesh_library
+  )
